--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Aug 08 13:30:11 CST 2024
-sdk.dir=C\:\\Users\\Administrator\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/weiwei/Library/Android/sdk
